added section in website

--- a/index.html
+++ b/index.html
@@ -49,6 +49,60 @@
         </div>
       </section>
     </header>
+
+    <section class="container sec1">
+      <h2 class="sec1heading">Browse homes in Baghpat, Utter Predesh</h2>
+      <div class="boxes">
+        <div class="box" id="box1">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">New Listings</a>
+            <a href="#" class="boxtextright">379</a>
+          </div>
+        </div>
+        <div class="box" id="box2">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">Price Reduced</a>
+            <a href="#" class="boxtextright">615</a>
+          </div>
+        </div>
+        <div class="box" id="box3">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">Open Houses</a>
+            <a href="#" class="boxtextright">38</a>
+          </div>
+        </div>
+        <div class="box" id="box4">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">Recently Sold</a>
+            <a href="#" class="boxtextright">29</a>
+          </div>
+        </div>
+        <div class="box" id="box5">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">New Constructions</a>
+            <a href="#" class="boxtextright">52</a>
+          </div>
+        </div>
+        <div class="box" id="box6">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">Land</a>
+            <a href="#" class="boxtextright">833</a>
+          </div>
+        </div>
+        <div class="box" id="box7">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">Foreclousers</a>
+            <a href="#" class="boxtextright">66</a>
+          </div>
+        </div>
+        <div class="box" id="box8">
+          <div class="boxtxt">
+            <a href="#" class="boxtextleft">Condos</a>
+            <a href="#" class="boxtextright">461</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
