--- a/index.html
+++ b/index.html
@@ -103,6 +103,65 @@
         </div>
       </div>
     </section>
+
+    <!-- footer section -->
+     <footer class="flex between">
+      <div class="left-footer">
+        <div class="flex">
+          <div class="icon">
+            <a href="#"><i class="fa-solid fa-location-dot"></i></a>
+          </div>
+          <div>
+            <div class="footer-text">
+              <p>Shahpur Baroli</p>
+              <h2>Utter Predesh</h2>
+            </div>
+          </div>
+        </div>
+        <div class="flex">
+          <div class="icon" > 
+            <a href="#"><i class="fa-solid fa-phone" style="padding: .9rem;"></i></a>
+          </div>
+          <div>
+            <div class="footer-text">
+              <h2>+91 6397929579</h2>
+            </div>
+          </div>
+        </div>
+        <div class="flex">
+          <div class="icon">
+            <a href="#"><i class="fa-solid fa-envelope"></i></a>
+          </div>
+          <div>
+            <div class="footer-text">
+              <a href="#">djadamnoob9568@gmail.com</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right-footer">
+        <div class="footer-text">
+          <h2>About the Company</h2>
+        </div>
+        <div>
+          <div class="footer-text">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quam qui amet cumque voluptate accusamus magni illum in maiores.
+            </p>
+          </div>
+        </div>
+        <div>
+          <div>
+            <ul class="flex footer-links">
+              <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <div class="copyright">&copy; 2024 Baghpat Real-Estate. All rights reserved.</div>
     <script src="script.js"></script>
   </body>
 </html>
