--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
 
     <header>
-      <section class="background">
+      <div class="background">
         <h1 class="heading">
           The #1 site real estate professionals trust*
         </h1>
@@ -47,61 +47,137 @@
           <input type="text" placeholder="Address, School, City, Zip or Neighborhood" class="search-box">
           <a href="#" class="search-icon fa-solid fa-magnifying-glass"></a>
         </div>
-      </section>
+      </div>
     </header>
 
-    <section class="container sec1">
-      <h2 class="sec1heading">Browse homes in Baghpat, Utter Predesh</h2>
-      <div class="boxes">
-        <div class="box" id="box1">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">New Listings</a>
-            <a href="#" class="boxtextright">379</a>
+    <section>
+      <div class="container sec1">
+        <h2 class="secheading">Browse homes in Baghpat, Utter Predesh</h2>
+        <div class="boxes">
+          <div class="box" id="box1">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">New Listings</a>
+              <a href="#" class="boxtextright">379</a>
+            </div>
           </div>
-        </div>
-        <div class="box" id="box2">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">Price Reduced</a>
-            <a href="#" class="boxtextright">615</a>
+          <div class="box" id="box2">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">Price Reduced</a>
+              <a href="#" class="boxtextright">615</a>
+            </div>
           </div>
-        </div>
-        <div class="box" id="box3">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">Open Houses</a>
-            <a href="#" class="boxtextright">38</a>
+          <div class="box" id="box3">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">Open Houses</a>
+              <a href="#" class="boxtextright">38</a>
+            </div>
           </div>
-        </div>
-        <div class="box" id="box4">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">Recently Sold</a>
-            <a href="#" class="boxtextright">29</a>
+          <div class="box" id="box4">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">Recently Sold</a>
+              <a href="#" class="boxtextright">29</a>
+            </div>
           </div>
-        </div>
-        <div class="box" id="box5">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">New Constructions</a>
-            <a href="#" class="boxtextright">52</a>
+          <div class="box" id="box5">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">New Constructions</a>
+              <a href="#" class="boxtextright">52</a>
+            </div>
           </div>
-        </div>
-        <div class="box" id="box6">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">Land</a>
-            <a href="#" class="boxtextright">833</a>
+          <div class="box" id="box6">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">Land</a>
+              <a href="#" class="boxtextright">833</a>
+            </div>
           </div>
-        </div>
-        <div class="box" id="box7">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">Foreclousers</a>
-            <a href="#" class="boxtextright">66</a>
+          <div class="box" id="box7">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">Foreclousers</a>
+              <a href="#" class="boxtextright">66</a>
+            </div>
           </div>
-        </div>
-        <div class="box" id="box8">
-          <div class="boxtxt">
-            <a href="#" class="boxtextleft">Condos</a>
-            <a href="#" class="boxtextright">461</a>
+          <div class="box" id="box8">
+            <div class="boxtxt">
+              <a href="#" class="boxtextleft">Condos</a>
+              <a href="#" class="boxtextright">461</a>
+            </div>
           </div>
         </div>
       </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <h2 class="secheading">Discover how we can help</h2>
+        <div>
+          <ul class="flex sec2btns">
+            <li><a href="#" class="sign-up-btn">Buying</a></li>
+            <li><a href="#" class="sign-up-btn">Renting</a></li>
+            <li><a href="#" class="sign-up-btn">Selling</a></li>
+          </ul>
+        </div>
+        <div class="flex sec2boxes">
+          <div class="sec2box">
+            <div class="sec2boxheading">
+              <h3>Find out how much can you afford</h3>
+              <i class="fa-solid fa-sack-dollar"></i>
+            </div>
+            <div class="sec2boxtext">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, assumenda deleniti commodi quaerat nihil suscipit nam omnis reprehenderit sequi.</p>
+            </div>
+            <div class="sec2boxheading">
+              <h3 class="underline">Try our affordable calculator</h3>
+            </div>
+          </div>
+          <div class="sec2box">
+            <div class="sec2boxheading">
+              <h3>Understand your monthely cost</h3>
+              <i class="fa-solid fa-calculator"></i>
+            </div>
+            <div class="sec2boxtext">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, assumenda deleniti commodi quaerat nihil suscipit nam omnis reprehenderit sequi.</p>
+            </div>
+            <div class="sec2boxheading">
+              <h3 class="underline">Try our mortgage calculator</h3>
+            </div>
+          </div>
+          <div class="sec2box">
+            <div class="sec2boxheading">
+              <h3>Get help with your down payment</h3>
+              <i class="fa-solid fa-money-bill-wave"></i>
+            </div>
+            <div class="sec2boxtext">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, assumenda deleniti commodi quaerat nihil suscipit nam omnis reprehenderit sequi.</p>
+            </div>
+            <div class="sec2boxheading">
+              <h3 class="underline">Find down payment help</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section>
+      <div class="left-image">
+        <div class="image">
+          <img src="./img/section-image1.avif" alt="image">
+        </div>
+        <div class="image-content">
+          <div class="image-heading">
+            <div class="image-heading1">
+              <h2>Need a home loan? Get pre-approved</h2>
+            </div>
+            <div class="image-txt">
+              <p>Find a lender who can offer competitive mortgage rates and help you with pre-approval.</p>
+            </div>
+            <div class="sign-up-btn image-btn">
+              <a href="#">Get pre-approved now</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="right-image"></div>
     </section>
 
     <!-- footer section -->
