--- a/index.html
+++ b/index.html
@@ -181,6 +181,28 @@
       <div class="right-image"></div>
     </section>
 
+    <section style="margin-top: 0;">
+      <div class="flex ">
+        <div class="right-image-text center">
+          <div class="center box-text">
+            <div class="image-heading1">
+              <h2>Get Local Info</h2>
+            </div>
+            <div class="image-txt">
+              <p style="max-width: 80%;">Does it have pet-friendly rentals? How are the schools? Get important local information on the area you're most interested in. </p>
+            </div>
+            <div  class="search" style="width: 80%; border: 1px solid black;">
+              <input type="text" placeholder="Addreaa, City or Neighbourhood"  class="search-box">
+              <a href="#" class="search-icon fa-solid fa-magnifying-glass"  style="width: 3.6rem;"></a>
+            </div>
+          </div>
+        </div>
+        <div class="image">
+          <img src="/img/section-image2.avif" alt="img">
+        </div>
+      </div>
+    </section>
+
     <!-- footer section -->
      <footer class="flex between">
       <div class="flex between footer-1">
