--- a/index.html
+++ b/index.html
@@ -3,39 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="XQf2zkcdYArHR3kc5fgiCFmqR33CmpWR9cpFVUBLevc" />
+    <meta
+      name="google-site-verification"
+      content="XQf2zkcdYArHR3kc5fgiCFmqR33CmpWR9cpFVUBLevc"
+    />
     <title>Baghpat real-estate</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="flex">
-        <a href="#" class="logo">
-            Sumit
-        </a>
-        <ul class="nav-btns flex">
-            <li><a href="#">Buy</a></li>
-            <li><a href="#">Sell</a></li>
-            <li><a href="#">Rent</a></li>
-            <li><a href="#">Find Realtors</a></li>
-            <li><a href="#">My Home</a></li>
-            <li><a href="#">News & Insights</a></li>
+      <a href="#" class="logo"> Sumit </a>
+      <div class="flex navigation-bar-links">
+        <ul class="nav-links nav-btns flex">
+          <li><a href="#">Buy</a></li>
+          <li><a href="#">Sell</a></li>
+          <li><a href="#">Rent</a></li>
+          <li><a href="#">Find Realtors</a></li>
+          <li><a href="#">My Home</a></li>
+          <li><a href="#">News & Insights</a></li>
         </ul>
-        <ul class="nav-btns flex">
-            <li><a href="#">Manage Rentals</a></li>
-            <li><a href="#">Advertise</a></li>
+        <ul class="nav-rentals nav-btns flex">
+          <li><a href="#">Manage Rentals</a></li>
+          <li><a href="#">Advertise</a></li>
         </ul>
-        <ul class="nav-btns flex">
-            <li><a href="#">Log In</a></li>
-            <li class="sign-up-btn"><a href="#" >Sign Up</a></li>
+        <ul class="nav-login-signup nav-btns flex">
+          <li><a href="#">Log In</a></li>
+          <li class="sign-up-btn"><a href="#">Sign Up</a></li>
         </ul>
+      </div>
+      <div class="menu-bar">
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </nav>
 
     <header>
       <div class="background">
-        <h1 class="heading">
-          The #1 site real estate professionals trust*
-        </h1>
+        <h1 class="heading">The #1 site real estate professionals trust*</h1>
         <ul class="flex links">
           <li><a href="#">Buy</a></li>
           <li><a href="#">Rent</a></li>
@@ -45,7 +55,11 @@
           <li><a href="#">Home Value</a></li>
         </ul>
         <div class="search">
-          <input type="text" placeholder="Address, School, City, Zip or Neighborhood" class="search-box">
+          <input
+            type="text"
+            placeholder="Address, School, City, Zip or Neighborhood"
+            class="search-box"
+          />
           <a href="#" class="search-icon fa-solid fa-magnifying-glass"></a>
         </div>
       </div>
@@ -124,7 +138,11 @@
               <i class="fa-solid fa-sack-dollar"></i>
             </div>
             <div class="sec2boxtext">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, assumenda deleniti commodi quaerat nihil suscipit nam omnis reprehenderit sequi.</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus, assumenda deleniti commodi quaerat nihil suscipit
+                nam omnis reprehenderit sequi.
+              </p>
             </div>
             <div class="sec2boxheading">
               <h3 class="underline">Try our affordable calculator</h3>
@@ -136,7 +154,11 @@
               <i class="fa-solid fa-calculator"></i>
             </div>
             <div class="sec2boxtext">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, assumenda deleniti commodi quaerat nihil suscipit nam omnis reprehenderit sequi.</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus, assumenda deleniti commodi quaerat nihil suscipit
+                nam omnis reprehenderit sequi.
+              </p>
             </div>
             <div class="sec2boxheading">
               <h3 class="underline">Try our mortgage calculator</h3>
@@ -148,7 +170,11 @@
               <i class="fa-solid fa-money-bill-wave"></i>
             </div>
             <div class="sec2boxtext">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, assumenda deleniti commodi quaerat nihil suscipit nam omnis reprehenderit sequi.</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus, assumenda deleniti commodi quaerat nihil suscipit
+                nam omnis reprehenderit sequi.
+              </p>
             </div>
             <div class="sec2boxheading">
               <h3 class="underline">Find down payment help</h3>
@@ -158,11 +184,10 @@
       </div>
     </section>
 
-
     <section>
       <div class="left-image">
         <div class="image">
-          <img src="./img/section-image1.avif" alt="image">
+          <img src="./img/section-image1.avif" alt="image" />
         </div>
         <div class="image-content">
           <div class="image-heading">
@@ -170,7 +195,10 @@
               <h2>Need a home loan? Get pre-approved</h2>
             </div>
             <div class="image-txt">
-              <p>Find a lender who can offer competitive mortgage rates and help you with pre-approval.</p>
+              <p>
+                Find a lender who can offer competitive mortgage rates and help
+                you with pre-approval.
+              </p>
             </div>
             <div class="sign-up-btn image-btn">
               <a href="#">Get pre-approved now</a>
@@ -178,33 +206,44 @@
           </div>
         </div>
       </div>
-      <div class="right-image"></div>
     </section>
 
-    <section style="margin-top: 0;">
-      <div class="flex ">
+    <section style="margin-top: 0">
+      <div class="flex">
         <div class="right-image-text center">
           <div class="center box-text">
             <div class="image-heading1">
               <h2>Get Local Info</h2>
             </div>
             <div class="image-txt">
-              <p style="max-width: 80%;">Does it have pet-friendly rentals? How are the schools? Get important local information on the area you're most interested in. </p>
+              <p style="max-width: 80%">
+                Does it have pet-friendly rentals? How are the schools? Get
+                important local information on the area you're most interested
+                in.
+              </p>
             </div>
-            <div  class="search" style="width: 80%; border: 1px solid black;">
-              <input type="text" placeholder="Addreaa, City or Neighbourhood"  class="search-box">
-              <a href="#" class="search-icon fa-solid fa-magnifying-glass"  style="width: 3.6rem;"></a>
+            <div class="search" style="width: 80%; border: 1px solid black">
+              <input
+                type="text"
+                placeholder="Addreaa, City or Neighbourhood"
+                class="search-box"
+              />
+              <a
+                href="#"
+                class="search-icon fa-solid fa-magnifying-glass"
+                style="width: 3.6rem"
+              ></a>
             </div>
           </div>
         </div>
         <div class="image">
-          <img src="/img/section-image2.avif" alt="img">
+          <img src="/img/section-image2.avif" alt="img" />
         </div>
       </div>
     </section>
 
     <!-- footer section -->
-     <footer class="flex between">
+    <footer class="flex between">
       <div class="flex between footer-1">
         <div class="left-footer">
           <div class="flex">
@@ -219,8 +258,10 @@
             </div>
           </div>
           <div class="flex">
-            <div class="icon" > 
-              <a href="#"><i class="fa-solid fa-phone" style="padding: .9rem;"></i></a>
+            <div class="icon">
+              <a href="#"
+                ><i class="fa-solid fa-phone" style="padding: 0.9rem"></i
+              ></a>
             </div>
             <div>
               <div class="footer-text">
@@ -245,23 +286,40 @@
           </div>
           <div>
             <div class="footer-text">
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quam qui amet cumque voluptate accusamus magni illum in maiores.
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatum quam qui amet cumque voluptate accusamus magni illum
+                in maiores.
               </p>
             </div>
           </div>
           <div>
             <div>
               <ul class="flex footer-links">
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.instagram.com/its_sumit_bhardwaj_007/"
+                    target="_blank"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                </li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-      <div class="copyright">&copy; 2024 Baghpat Real-Estate. All rights reserved.</div>
+      <div class="copyright">
+        &copy; 2024 Baghpat Real-Estate. All rights reserved.
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
