responsive navigation bar

--- a/index.html
+++ b/index.html
@@ -18,28 +18,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="flex">
-      <a href="#" class="logo"> Sumit </a>
-      <div class="flex navigation-bar-links">
-        <ul class="nav-links nav-btns flex">
-          <li><a href="#">Buy</a></li>
-          <li><a href="#">Sell</a></li>
-          <li><a href="#">Rent</a></li>
-          <li><a href="#">Find Realtors</a></li>
-          <li><a href="#">My Home</a></li>
-          <li><a href="#">News & Insights</a></li>
-        </ul>
-        <ul class="nav-rentals nav-btns flex">
-          <li><a href="#">Manage Rentals</a></li>
-          <li><a href="#">Advertise</a></li>
-        </ul>
-        <ul class="nav-login-signup nav-btns flex">
-          <li><a href="#">Log In</a></li>
-          <li class="sign-up-btn"><a href="#">Sign Up</a></li>
-        </ul>
-      </div>
-      <div class="menu-bar">
-        <i class="fa-solid fa-bars"></i>
+    <nav>
+      <div class="flex nav">
+        <a href="#" class="logo"> Sumit </a>
+        <div class="navigation-bar-links">
+          <ul class="nav-links nav-btns flex">
+            <li><a href="#">Buy</a></li>
+            <li><a href="#">Sell</a></li>
+            <li><a href="#">Rent</a></li>
+            <li><a href="#">Find Realtors</a></li>
+            <li><a href="#">My Home</a></li>
+            <li><a href="#">News & Insights</a></li>
+          </ul>
+          <ul class="nav-rentals nav-btns flex">
+            <li><a href="#">Manage Rentals</a></li>
+            <li><a href="#">Advertise</a></li>
+          </ul>
+          <ul class="nav-login-signup nav-btns flex">
+            <li><a href="#">Log In</a></li>
+            <li class="sign-up-btn"><a href="#">Sign Up</a></li>
+          </ul>
+        </div>
+        <div class="menu-bar">
+          <i class="fa-solid fa-bars"></i>
+          <i class="fa-solid fa-xmark"></i>
+        </div>
       </div>
     </nav>
 
