--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css">
   </head>
   <body>
     <nav>
@@ -125,16 +126,16 @@
     </section>
 
     <section>
-      <div class="container">
+      <div class="container sec2">
         <h2 class="secheading">Discover how we can help</h2>
         <div>
-          <ul class="flex sec2btns">
+          <ul class="sec2btns">
             <li><a href="#" class="sign-up-btn">Buying</a></li>
             <li><a href="#" class="sign-up-btn">Renting</a></li>
             <li><a href="#" class="sign-up-btn">Selling</a></li>
           </ul>
         </div>
-        <div class="flex sec2boxes">
+        <div class="sec2boxes">
           <div class="sec2box">
             <div class="sec2boxheading">
               <h3>Find out how much can you afford</h3>
@@ -212,20 +213,20 @@
     </section>
 
     <section style="margin-top: 0">
-      <div class="flex">
+      <div class="flex right-image">
         <div class="right-image-text center">
           <div class="center box-text">
             <div class="image-heading1">
               <h2>Get Local Info</h2>
             </div>
             <div class="image-txt">
-              <p style="max-width: 80%">
+              <p>
                 Does it have pet-friendly rentals? How are the schools? Get
                 important local information on the area you're most interested
                 in.
               </p>
             </div>
-            <div class="search" style="width: 80%; border: 1px solid black">
+            <div class="search search-small">
               <input
                 type="text"
                 placeholder="Addreaa, City or Neighbourhood"
@@ -234,7 +235,6 @@
               <a
                 href="#"
                 class="search-icon fa-solid fa-magnifying-glass"
-                style="width: 3.6rem"
               ></a>
             </div>
           </div>
